# programming-examples

./: ProjectHome.md
APICppPython/: a.out  example.c  example2.c  write.txt
Algorithms_DataStructures/: Binary_search.py  LinkedList.py  example0_LinkedList.py  example_deque.py
Cpp/: Makefile  exectueterminal.cpp  functions_pointers  functions_pointers.cpp
LaTeX/: Relax2Eq.aux  Relax2Eq.bbl  Relax2Eq.blg  Relax2Eq.out  Relax2Eq.tex  Relax2Eq.tex.backup  Relax2EqNotes.bib  Relax2EqRef.bib
MachineLearning/: HelloWorld.py
Node.js/: main.js
R/: .RData  .Rhistory  plot02.r
automake/: config.status  configure  configure.ac  main01.cpp
automake/autom4te.cache/: output.1  requests  traces.0  traces.1
automake/example02/: Makefile  config.status
automake/example02/autom4te.cache/: requests
automake/example02/src/: Makefile  hello
autotools/: Makefile.in  configure  configure.in
autotools/example01/: Makefile.am  autotoolsInit.sh  configure.ac  configure.scan
autotools/example01/autom4te.cache/: output.0  requests  traces.0
autotools/example01/my_inc/: Makefile
autotools/example01/src/: Makefile.am  main.cpp
autotools/example02/: Makefile  Makefile.in  MySteps.txt  config.h  config.status  configure  configure.ac  configure.scan
autotools/example02/autom4te.cache/: output.1  requests  traces.0  traces.1
autotools/example02/src/: Makefile  Makefile.am  Makefile.in
autotools/example02/src/.deps/: example_queue.Po
bash/: ForExample.sh  If_FileExist.sh  commands.csv  csvfile.csv  examplePython.py  first_script.sh  functions.sh  gnuplotExample.sh  let_example.sh  options.sh  readcsvfile.sh  script_background.sh  sum_variables.sh  switchCase.sh
clusterScripts/: DIGG_api.py  DIGG_json.py  REST-WS-MODS-API.mm  ejemplo.py  submitGridJob.py  submitJob.q  submitSampleJob.py  urllib_output.html  (+1 more)
(+1084 files in other folders)
